--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <h2 class="text-3xl font-bold mb-10">> Projects</h2>
 
       <div class="max-w-3xl mx-auto bg-gray-900 rounded-lg shadow-lg overflow-hidden neon-hover">
-        <img src="<?= base_url('img/proj.jpg') ?>" alt="Student Grading Portal" class="w-full h-56 object-cover">
+        <img src="img/proj.jpg" alt="Student Grading Portal" class="w-full h-56 object-cover">
         <div class="p-6 text-left">
           <span class="inline-block px-3 py-1 text-sm bg-green-400 text-black font-semibold rounded-full mb-4">Web Development</span>
           <h3 class="text-2xl font-bold text-green-400 mb-2">Student Grading Portal</h3>
